Fix Alignment

--- a/webroot/css/base.less
+++ b/webroot/css/base.less
@@ -55,7 +55,7 @@ footer a:hover {
 h1 {
 	background: #369;
 	color: #f9f9f9;
-	text-align:center;
+	text-align: left;
 }
 h2 {
 	border-bottom: 1px solid #369;
